Fix overflow issue #542

--- a/src/scss/config/scale/_theme-sizes.scss
+++ b/src/scss/config/scale/_theme-sizes.scss
@@ -4,6 +4,6 @@ $radius: var(--half-shim);
 $grid-hero: calc(var(--gutter) * 8);
 $logo-item: 10rem;
 $grid-item: 16rem;
-$main-min: calc(100vw - var(--page-margin) * 2);
+$main-min: min-content;
 $extra: calc((var(--wide-page) - var(--page)) / 2);
 $post-thumb-small: 6rem;
