--- a/src/scss/patterns/_sections.scss
+++ b/src/scss/patterns/_sections.scss
@@ -146,7 +146,7 @@
   }
 
   > * {
-    max-width: calc(100vw - var(--page-margin));
+    max-width: 100%;
   }
 }
 
